--- a/frontend/src/components/footer/footer.pug
+++ b/frontend/src/components/footer/footer.pug
@@ -9,5 +9,5 @@ mixin footer
         .footer__bottom 
             .footer__bottom-container
                 .footer__copy © 2020—2023, ООО «Лайтнинг Софт»
-                a(id="footer-telegram" href="https://t.me/zanko_av" class="footer__telegram")
-                    img(width="24", height="24", src=require('@img/icons/telegram-gray.svg'), alt='telegram', class='footer__telegram-icon')
+                a(target="_blank" href="https://t.me/zanko_av" class="footer__telegram")
+                    img(id="footer-telegram" width="24", height="24", src=require('@img/icons/telegram-gray.svg'), alt='telegram', class='footer__telegram-icon')
