--- a/frontend/src/components/header/header.pug
+++ b/frontend/src/components/header/header.pug
@@ -9,7 +9,7 @@ mixin header(showMenu)
                     a(href="#pricing" class="header__menu-item") Стоимость сайта
                     a(href="#faq" class="header__menu-item") Вопрос-ответ
             a(id="header-phone" href="tel:375295558386" class="header__phone") +375 29 555 83 86
-            a(id="header-telegram" href="https://t.me/zanko_av" class="header__telegram")
-                img(width="24", height="24", src=require('@img/icons/telegram.svg'),alt='telegram', class='header__telegram-icon')
+            a(target="_blank" href="https://t.me/zanko_av" class="header__telegram")
+                img(id="header-telegram" width="24", height="24", src=require('@img/icons/telegram.svg'),alt='telegram', class='header__telegram-icon')
 
 
