--- a/frontend/src/components/header-mobile/header-mobile.pug
+++ b/frontend/src/components/header-mobile/header-mobile.pug
@@ -17,7 +17,7 @@ mixin header-mobile()
                     a(href="#faq" class="header-mobile__navigation-bottom-menu-item") Вопрос-ответ
                 .header-mobile__navigation-bottom-calls 
                     a(id="header-phone" href="tel:375295558386" class="header-mobile__navigation-bottom-phone") +375 29 555 83 86
-                    a(id="header-telegram" href="https://t.me/zanko_av" class="header-mobile__telegram")
-                        img(width="24", height="24", src=require('@img/icons/telegram.svg'), alt="telegram", class='header__telegram-icon')
+                    a(target="_blank" href="https://t.me/zanko_av" class="header-mobile__telegram")
+                        img(id="header-telegram" width="24", height="24", src=require('@img/icons/telegram.svg'), alt="telegram", class='header__telegram-icon')
 
 
