--- a/frontend/src/common/mixins.pug
+++ b/frontend/src/common/mixins.pug
@@ -4,6 +4,7 @@ include ./../components/button/button
 include ./../components/header/header
 include ./../components/header-mobile/header-mobile
 include ./../components/header-mobile-error404/header-mobile-error404
+include ./../components/header-mobile-post/header-mobile-post
 include ./../components/footer/footer
 include ./../components/footer-mobile/footer-mobile
 include ./../components/welcome/welcome
@@ -25,3 +26,4 @@ include ./../components/faq/faq
 include ./../components/page404/page404
 include ./../components/faq-mobile/faq-mobile
 include ./../components/page404-mobile/page404-mobile
+include ./../components/post/post
