--- a/frontend/src/common/common-desktop.scss
+++ b/frontend/src/common/common-desktop.scss
@@ -6,6 +6,13 @@ body {
     background-color: $LS_GRAY_6;
 }
 
+.single-post {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    justify-content: space-between;
+}
+
 // MARGIN START
 
 .mb-16 {
@@ -40,6 +47,10 @@ body {
     margin-bottom: 74px;
 }
 
+.mt-32 {
+    margin-top: 32px;
+}
+
 // MARGIN END
 
 // PADDING START
@@ -51,6 +62,11 @@ body {
     padding-top: 128px;
 }
 // PADDING END
+
+// DISPLAY
+.d-b {
+    display: block;
+}
 
 @keyframes fade-in {
     0% {
