--- a/frontend/src/templates/desktop/post.pug
+++ b/frontend/src/templates/desktop/post.pug
@@ -4,6 +4,7 @@ html
     head
         +meta()
     body
-        +header(false)
-        +post()
-        +footer()
+        .single-post
+            +header(false)
+            +post()
+            +footer()
