--- a/frontend/src/components/post/post.scss
+++ b/frontend/src/components/post/post.scss
@@ -1,18 +1,40 @@
 @import './../../common/constants';
 
 .post {
-    @include container;
     margin-top: 64px;
-    padding-top: 56px;
+    padding: 56px 8px;
     min-height: 300px;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
 
     &:empty {
         &::after {
             content: 'No content yet!';
             display: block;
-            color: #aaa;
+            color: $LS_GRAY_2;
             text-align: center;
             font-size: 24px;
         }
+    }
+
+    &__title {
+        @include font-h1;
+    }
+
+    &__content {
+        @include font-p1;
+    }
+
+    &__image {
+        width: 100%;
+        object-fit: contain;
+        border-radius: 12px;
+        box-shadow: 0px 8px 16px $LS_GRAY_2;
+    }
+
+    &__date {
+        @include font-p3;
+        color: $LS_GRAY_2;
     }
 }
