--- a/frontend/src/components/post/post.pug
+++ b/frontend/src/components/post/post.pug
@@ -3,4 +3,4 @@ mixin post()
         h1.post__title.mb-8 Title 
         small.d-b.post__date.mb-16 от 04.03.2025 
         img(class="post__image", src="https://www.placebear.com/800/400", alt="Title")
-        .post__content.mt-32 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat doloremque enim ex, quaerat, sunt perferendis et sapiente natus laborum voluptatibus expedita tenetur consequatur facilis iste ea reiciendis magnam impedit? Dignissimos.
+        .post__content.ls-editor.mt-32 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat doloremque enim ex, quaerat, sunt perferendis et sapiente natus laborum voluptatibus expedita tenetur consequatur facilis iste ea reiciendis magnam impedit? Dignissimos.
