--- a/frontend/src/common/constants.scss
+++ b/frontend/src/common/constants.scss
@@ -6,7 +6,7 @@ $LS_GRAY_2: #9299a2;
 $LS_GRAY_3: #dddfe0;
 $LS_GRAY_4: #eaecee;
 $LS_GRAY_5: #777777;
-$LS_GRAY_6: #f6f7f8;
+$LS_GRAY_6: #f6f7ff;
 $LS_GRAY_7: #cfd0d0;
 
 $LS_BLUE_1: #4e89d1;
