--- a/frontend/src/common/mixins.pug
+++ b/frontend/src/common/mixins.pug
@@ -27,3 +27,9 @@ include ./../components/page404/page404
 include ./../components/faq-mobile/faq-mobile
 include ./../components/page404-mobile/page404-mobile
 include ./../components/post/post
+
+include ./../components-v2/header/header
+include ./../components-v2/post/post
+include ./../components-v2/footer/footer
+
+
