--- a/frontend/src/components/meta/meta.pug
+++ b/frontend/src/components/meta/meta.pug
@@ -4,4 +4,5 @@ mixin meta
     title=htmlWebpackPlugin.options.title
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
