--- a/frontend/src/common/constants-v2.scss
+++ b/frontend/src/common/constants-v2.scss
@@ -166,8 +166,8 @@ $MEDIA: (
 
 // CONTAINER START:
 @mixin container() {
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 16px;
+    padding-right: 16px;
 
     @include lg {
         max-width: 1064px;
@@ -214,6 +214,12 @@ $MEDIA: (
         border-radius: 12px;
         box-shadow: 0px 8px 16px #9299a2;
         margin: 24px 0;
+    }
+
+    a {
+        color: $LS_GRAY_1;
+        font-weight: bold;
+        text-decoration: underline;
     }
 }
 // EDITOR END;
