--- a/frontend/src/common/constants-v2.scss
+++ b/frontend/src/common/constants-v2.scss
@@ -228,6 +228,7 @@ $MEDIA: (
         .wp-block-button__link {
             color: #ffffff;
             text-decoration: none;
+            display: flex;
         }
     }
 }
